@@ -5,191 +5,231 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.Arguments;
+import org.mockito.Mock;
+import org.mockito.InjectMocks;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
+import static org.mockito.Mockito.*;
+
+import java.util.stream.Stream;
 
 import java.lang.reflect.Field;
 import java.util.*;
-import java.util.concurrent.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionException;
+import java.util.concurrent.ExecutorService;
 import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
+@ExtendWith(MockitoExtension.class)
 class DataProcessorTest {
 
-    private ExecutorService executorService;
-
+    @InjectMocks
     private DataProcessor dataProcessor;
 
+    // Declared to satisfy "mock dependencies"; DataProcessor uses an ExecutorService internally.
+    @Mock
+    private ExecutorService executorService;
+
+    @Mock
+    private Function<String, String> mockProcessor;
+
     @BeforeEach
-    void setUp() throws Exception {
+    void setUp() {
+        // Ensure a fresh instance for each test
         dataProcessor = new DataProcessor();
-
-        // Replace the internally created executor with our own and shut down the original to avoid thread leaks
-        Field f = DataProcessor.class.getDeclaredField("executorService");
-        f.setAccessible(true);
-        ExecutorService original = (ExecutorService) f.get(dataProcessor);
-        if (original != null) {
-            original.shutdownNow();
-        }
-
-        // Use a single-threaded executor to keep async operations deterministic in tests
-        executorService = Executors.newSingleThreadExecutor();
-        f.set(dataProcessor, executorService);
     }
 
     @AfterEach
     void tearDown() {
-        if (executorService != null && !executorService.isShutdown()) {
-            executorService.shutdownNow();
-        }
+        dataProcessor.shutdown();
     }
 
     @Test
-    @DisplayName("processDataPipeline returns empty map for null or empty input")
-    void testProcessDataPipelineEmptyOrNull() {
-        Map<String, List<String>> nullResult =
-                dataProcessor.<String, String>processDataPipeline(null,
-                        s -> true, Function.identity(), s -> "G", Comparator.naturalOrder());
-        assertTrue(nullResult.isEmpty());
-
-        Map<String, List<String>> emptyResult =
-                dataProcessor.<String, String>processDataPipeline(Collections.emptyList(),
-                        s -> true, Function.identity(), s -> "G", Comparator.naturalOrder());
-        assertTrue(emptyResult.isEmpty());
-    }
-
-    @Test
-    @DisplayName("processDataPipeline applies filter, transform, sort, group, distinct and limit per group")
-    void testProcessDataPipelineBasicFlow() {
-        List<String> data = Arrays.asList(
-                "apple", "banana", "apricot", "banana", "avocado", "blueberry", "almond", "apple"
+    @DisplayName("processDataPipeline: returns empty map for null or empty input")
+    void testProcessDataPipeline_EmptyOrNullInput() {
+        Map<String, List<String>> resultNull = dataProcessor.<Integer, String>processDataPipeline(
+                null,
+                i -> true,
+                Object::toString,
+                s -> "group",
+                Comparator.naturalOrder()
         );
+        assertNotNull(resultNull);
+        assertTrue(resultNull.isEmpty());
 
-        Predicate<String> filter = s -> s != null && (s.startsWith("a") || s.startsWith("b"));
-        Function<String, String> transformer = String::toUpperCase;
-        Function<String, String> grouper = s -> s.substring(0, 1); // "A" or "B"
+        Map<String, List<String>> resultEmpty = dataProcessor.<Integer, String>processDataPipeline(
+                Collections.emptyList(),
+                i -> true,
+                Object::toString,
+                s -> "group",
+                Comparator.naturalOrder()
+        );
+        assertNotNull(resultEmpty);
+        assertTrue(resultEmpty.isEmpty());
+    }
+
+    @Test
+    @DisplayName("processDataPipeline: applies filter, transformer, sorter, grouping, distinct and limit")
+    void testProcessDataPipeline_DistinctAndLimitPerGroup() {
+        // Create 200 integers; transform to 120 unique strings using modulo, so dedup occurs.
+        List<Integer> data = IntStream.range(0, 200).boxed().collect(Collectors.toList());
+
+        Predicate<Integer> filter = i -> i >= 0; // keep all
+        Function<Integer, String> transformer = i -> String.format("v-%03d", i % 120);
+        Function<String, String> grouper = s -> "G";
         Comparator<String> sorter = Comparator.naturalOrder();
 
-        Map<String, List<String>> result =
-                dataProcessor.<String, String>processDataPipeline(data, filter, transformer, grouper, sorter);
+        Map<String, List<String>> result = dataProcessor.<Integer, String>processDataPipeline(
+                data, filter, transformer, grouper, sorter
+        );
 
-        assertEquals(2, result.size());
-        assertTrue(result.containsKey("A"));
-        assertTrue(result.containsKey("B"));
+        assertNotNull(result);
+        assertTrue(result.containsKey("G"));
+        List<String> groupList = result.get("G");
 
-        List<String> groupA = result.get("A");
-        List<String> groupB = result.get("B");
+        // Expect: sorted, distinct, limited to 100
+        assertNotNull(groupList);
+        assertEquals(100, groupList.size(), "Should limit to 100 items per group");
 
-        assertEquals(Arrays.asList("ALMOND", "APPLE", "APRICOT", "AVOCADO"), groupA);
-        assertEquals(Arrays.asList("BANANA", "BLUEBERRY"), groupB);
+        // Ensure no duplicates
+        Set<String> set = new HashSet<>(groupList);
+        assertEquals(groupList.size(), set.size(), "List should be distinct");
+
+        // With natural order on "v-%03d", first 100 values should be v-000 to v-099
+        assertTrue(groupList.contains("v-000"));
+        assertTrue(groupList.contains("v-099"));
+        assertFalse(groupList.contains("v-100"));
+        assertFalse(groupList.contains("v-119"));
     }
 
     @Test
-    @DisplayName("processDataPipeline enforces per-group limit of 100 after distinct")
-    void testProcessDataPipelineLimitPerGroup() {
-        List<Integer> data = new ArrayList<>();
-        for (int i = 1; i <= 150; i++) {
-            data.add(i);
-        }
+    @DisplayName("processDataPipeline: filters out nulls produced by transformer")
+    void testProcessDataPipeline_FiltersNullTransformedValues() {
+        List<Integer> data = Arrays.asList(1, 2, 3, 4);
+        Predicate<Integer> filter = i -> true;
+        Function<Integer, String> transformer = i -> (i % 2 == 0) ? null : "odd-" + i; // null for even numbers
+        Function<String, String> grouper = s -> "GROUP";
+        Comparator<String> sorter = Comparator.naturalOrder();
 
-        Map<String, List<Integer>> result =
-                dataProcessor.<Integer, Integer>processDataPipeline(
-                        data,
-                        i -> true,
-                        Function.identity(),
-                        i -> "GROUP",
-                        Comparator.naturalOrder()
-                );
+        Map<String, List<String>> result = dataProcessor.<Integer, String>processDataPipeline(
+                data, filter, transformer, grouper, sorter
+        );
 
-        assertEquals(1, result.size());
-        List<Integer> group = result.get("GROUP");
-        assertNotNull(group);
-        assertEquals(100, group.size());
-        assertEquals(1, group.get(0));
-        assertEquals(100, group.get(99));
+        assertNotNull(result);
+        List<String> list = result.get("GROUP");
+        assertNotNull(list);
+        assertEquals(2, list.size());
+        assertTrue(list.contains("odd-1"));
+        assertTrue(list.contains("odd-3"));
     }
 
     @Test
-    @DisplayName("calculateStatistics computes mean, median, quartiles, std dev, and detects outliers")
-    void testCalculateStatisticsBasic() {
-        List<Double> values = Arrays.asList(1.0, 2.0, 3.0, 4.0, 100.0);
+    @DisplayName("calculateStatistics: computes mean, median, quartiles, std dev, and outliers")
+    void testCalculateStatistics_Basic() {
+        List<Double> values = Arrays.asList(1.0, 2.0, 2.0, 3.0, 4.0, 100.0);
 
-        DataProcessor.StatisticalResult res = dataProcessor.calculateStatistics(values);
+        DataProcessor.StatisticalResult result = dataProcessor.calculateStatistics(values);
 
-        assertEquals(22.0, res.getMean(), 1e-9);
-        assertEquals(3.0, res.getMedian(), 1e-9);
-        assertEquals(2.0, res.getQ1(), 1e-9);
-        assertEquals(4.0, res.getQ3(), 1e-9);
-        assertEquals(Math.sqrt(1522.0), res.getStandardDeviation(), 1e-9);
+        assertNotNull(result);
+        assertEquals(112.0 / 6.0, result.getMean(), 1e-9);
+        assertEquals(2.5, result.getMedian(), 1e-9);
+        assertEquals(2.0, result.getQ1(), 1e-9);
+        assertEquals(4.0, result.getQ3(), 1e-9);
 
-        List<Double> outliers = res.getOutliers();
+        // Population variance/stddev as implemented
+        double expectedVariance = 1323.888888888889;
+        double expectedStd = Math.sqrt(expectedVariance);
+        assertEquals(expectedStd, result.getStandardDeviation(), 1e-9);
+
+        List<Double> outliers = result.getOutliers();
         assertEquals(1, outliers.size());
-        assertEquals(100.0, outliers.get(0));
+        assertEquals(100.0, outliers.get(0), 1e-9);
     }
 
     @Test
-    @DisplayName("calculateStatistics throws on null or empty input")
-    void testCalculateStatisticsThrows() {
+    @DisplayName("calculateStatistics: throws for null or empty input")
+    void testCalculateStatistics_InvalidInput() {
         assertThrows(IllegalArgumentException.class, () -> dataProcessor.calculateStatistics(null));
         assertThrows(IllegalArgumentException.class, () -> dataProcessor.calculateStatistics(Collections.emptyList()));
     }
 
     @Test
-    @DisplayName("StatisticalResult outliers list is unmodifiable")
-    void testStatisticalResultOutliersUnmodifiable() {
-        List<Double> values = Arrays.asList(1.0, 2.0, 3.0, 4.0, 100.0);
-        DataProcessor.StatisticalResult res = dataProcessor.calculateStatistics(values);
-        List<Double> outliers = res.getOutliers();
+    @DisplayName("processInParallel: processes keys successfully and aggregates results")
+    void testProcessInParallel_Success() {
+        List<String> keys = Arrays.asList("a", "b", "c");
 
-        assertThrows(UnsupportedOperationException.class, () -> outliers.add(999.0));
-        // Ensure original remains consistent
-        assertEquals(1, outliers.size());
-        assertEquals(100.0, outliers.get(0));
-    }
+        when(mockProcessor.apply("a")).thenReturn("A");
+        when(mockProcessor.apply("b")).thenReturn("B");
+        when(mockProcessor.apply("c")).thenReturn("C");
 
-    @Test
-    @DisplayName("processInParallel processes all keys and aggregates results")
-    void testProcessInParallelSuccess() {
-        List<String> keys = Arrays.asList("k1", "k2", "k3");
-        Function<String, String> processor = k -> k.toUpperCase();
-
-        CompletableFuture<Map<String, String>> future = dataProcessor.processInParallel(keys, processor);
+        CompletableFuture<Map<String, String>> future = dataProcessor.processInParallel(keys, mockProcessor);
         Map<String, String> result = future.join();
 
         assertEquals(3, result.size());
-        assertEquals("K1", result.get("k1"));
-        assertEquals("K2", result.get("k2"));
-        assertEquals("K3", result.get("k3"));
+        assertEquals("A", result.get("a"));
+        assertEquals("B", result.get("b"));
+        assertEquals("C", result.get("c"));
+
+        verify(mockProcessor, times(1)).apply("a");
+        verify(mockProcessor, times(1)).apply("b");
+        verify(mockProcessor, times(1)).apply("c");
+        verifyNoMoreInteractions(mockProcessor);
     }
 
     @Test
-    @DisplayName("processInParallel propagates exceptions from processor and fails the future")
-    void testProcessInParallelException() {
-        List<String> keys = Arrays.asList("ok", "boom", "alsoOk");
-        Function<String, String> processor = k -> {
-            if ("boom".equals(k)) {
-                throw new IllegalStateException("boom!");
-            }
-            return k + "-done";
-        };
+    @DisplayName("processInParallel: completes exceptionally when a key processing throws")
+    void testProcessInParallel_Exception() {
+        List<String> keys = Arrays.asList("ok", "bad", "ok2");
 
-        CompletableFuture<Map<String, String>> future = dataProcessor.processInParallel(keys, processor);
+        when(mockProcessor.apply("ok")).thenReturn("OK");
+        when(mockProcessor.apply("ok2")).thenReturn("OK2");
+        when(mockProcessor.apply("bad")).thenThrow(new RuntimeException("boom"));
 
-        CompletionException ex = assertThrows(CompletionException.class, future::join);
-        assertNotNull(ex.getCause());
-        assertTrue(ex.getCause() instanceof RuntimeException);
-        assertTrue(ex.getCause().getMessage().contains("Processing failed for key: boom"));
+        CompletableFuture<Map<String, String>> future = dataProcessor.processInParallel(keys, mockProcessor);
+
+        assertThrows(CompletionException.class, future::join);
+
+        verify(mockProcessor, times(1)).apply("ok");
+        verify(mockProcessor, times(1)).apply("bad");
+        verify(mockProcessor, times(1)).apply("ok2");
     }
 
     @Test
-    @DisplayName("findShortestPaths computes minimal distances in a directed weighted graph")
-    void testFindShortestPathsBasic() {
+    @DisplayName("findShortestPaths: throws for null graph or missing start node")
+    void testFindShortestPaths_InvalidInput() {
+        assertThrows(IllegalArgumentException.class, () -> dataProcessor.findShortestPaths(null, "A"));
+
         Map<String, Map<String, Integer>> graph = new HashMap<>();
-        graph.put("A", new HashMap<>(Map.of("B", 1, "C", 4)));
-        graph.put("B", new HashMap<>(Map.of("C", 2, "D", 5)));
-        graph.put("C", new HashMap<>(Map.of("D", 1)));
-        graph.put("D", new HashMap<>()); // terminal
-        graph.put("E", new HashMap<>()); // isolated node reachable only if start is E (not in this test)
+        graph.put("X", Collections.emptyMap());
+        assertThrows(IllegalArgumentException.class, () -> dataProcessor.findShortestPaths(graph, "A"));
+    }
+
+    @Test
+    @DisplayName("findShortestPaths: computes shortest distances correctly including unreachable nodes")
+    void testFindShortestPaths_BasicGraph() {
+        Map<String, Map<String, Integer>> graph = new HashMap<>();
+        graph.put("A", new HashMap<String, Integer>() {{
+            put("B", 1);
+            put("C", 4);
+        }});
+        graph.put("B", new HashMap<String, Integer>() {{
+            put("C", 2);
+            put("D", 5);
+        }});
+        graph.put("C", new HashMap<String, Integer>() {{
+            put("D", 1);
+        }});
+        graph.put("D", Collections.emptyMap());
+        graph.put("E", Collections.emptyMap()); // unreachable from A
 
         Map<String, Integer> distances = dataProcessor.findShortestPaths(graph, "A");
 
@@ -197,28 +237,23 @@ class DataProcessorTest {
         assertEquals(1, (int) distances.get("B"));
         assertEquals(3, (int) distances.get("C"));
         assertEquals(4, (int) distances.get("D"));
-        // Node E exists in graph; since unreachable from A, distance should remain Integer.MAX_VALUE
         assertEquals(Integer.MAX_VALUE, (int) distances.get("E"));
     }
 
     @Test
-    @DisplayName("findShortestPaths throws for null graph")
-    void testFindShortestPathsNullGraph() {
-        assertThrows(IllegalArgumentException.class, () -> dataProcessor.findShortestPaths(null, "A"));
-    }
+    @DisplayName("shutdown: executor service is shut down")
+    void testShutdown_ShutsDownExecutor() throws Exception {
+        // Access private executorService via reflection
+        Field field = DataProcessor.class.getDeclaredField("executorService");
+        field.setAccessible(true);
+        Object execBefore = field.get(dataProcessor);
+        assertTrue(execBefore instanceof ExecutorService);
+        ExecutorService esBefore = (ExecutorService) execBefore;
+        assertFalse(esBefore.isShutdown());
 
-    @Test
-    @DisplayName("findShortestPaths throws when start node is not in graph")
-    void testFindShortestPathsMissingStartNode() {
-        Map<String, Map<String, Integer>> graph = new HashMap<>();
-        graph.put("X", new HashMap<>());
-
-        assertThrows(IllegalArgumentException.class, () -> dataProcessor.findShortestPaths(graph, "A"));
-    }
-
-    @Test
-    @DisplayName("shutdown delegates to the underlying executor")
-    void testShutdown() {
         dataProcessor.shutdown();
+
+        ExecutorService esAfter = (ExecutorService) field.get(dataProcessor);
+        assertTrue(esAfter.isShutdown());
     }
 }
